# desktop-streaming-client-android

./: .gitignore  Cargo.toml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/debug/myapplication/: CodecQuerySingleton.kt  MainActivity.kt  MainSettingsFragment.kt  MediaPlayerActivity.kt  NativeLibSingleton.kt  StreamingActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_streaming.xml
app/src/main/res/values/: styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
app/src/main/rust/: Cargo.toml  rust-toolchain.toml
app/src/main/rust/src/: activity.rs  decoder.rs  lib.rs  lifecycle.rs  log.rs  util.rs  window.rs
app/src/main/rust/src/activities/: lifecycle.rs  media_player.rs  mod.rs
app/src/main/rust/src/media/: codec.rs  engine.rs  format.rs  mime.rs  mod.rs  status.rs
app/src/main/rust/src/media/format/: mod.rs  video.rs
app/src/main/rust/src/webrtc/: decoder.rs  mod.rs  signaling.rs
app/src/main/rust/src/webrtc/decoder/: builder.rs  h264.rs  mod.rs  rtcp_helper.rs
gradle/wrapper/: gradle-wrapper.properties
src/: activity.rs  debug.rs  decoder.rs  lib.rs  media_format.rs
