[package]
name = "client-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
libc = "0.2"
log = "0.4.14"
ndk = { version = "0.6" }
ndk-context = "0.1"
ndk-glue = { version = "0.6", features = ["logger"] }

[package.metadata.android]
package = "com.foo.bar"
build_targets = [ "x86_64-linux-android" ]
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"