[package]
name = "client-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndk-sys = { version = "0.3", features = ["media"] }
anyhow = "1.0"
crossbeam-channel = "0.5"

[package.metadata.android]
package = "com.foo.bar"
build_targets = [ "x86_64-linux-android" ]
# build_targets = [ "aarch64-linux-android" ]
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"