[package]
name = "client-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.63"
bytes = "1.3.0"
futures-util = "0.3.25"
jni = "0.20"
ndk-sys = { version = "0.4", features = ["media"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
webrtc = "0.6"
webrtc-helper = { path = "../../../../../webrtc-helper" }
