[package]
name = "client-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.11"
async-trait = "0.1.63"
futures-util = "0.3.25"
jni = "0.20"
log = "0.4.17"
ndk-sys = { version = "0.4", features = ["media"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
webrtc = "0.6"
webrtc-helper = { git = "https://github.com/JRF63/webrtc-helper.git", rev = "8a2ce55" }
